refac: 스터디 도메인 리팩터링, 서비스 -> 도메인 로직 책임 이관